Added some new colors (Ugly so I will change it.)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cool Dev Portfolio | Home</title>
+  <title>Jonathan Tullis | Home</title>
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
@@ -24,7 +24,7 @@
     <!-- Hero Image Section -->
     <section class="hero-image">
       <img src="images/Welcome Image.png" alt="Welcome banner for game developers and learners">
-      <h1 class="main-heading">Welcome to my Portfolio</h1>
+      <h1 class="main-heading">I am a Gameplay Programmer</h1>
     </section>
     
 
@@ -83,7 +83,6 @@
 
   <footer>
     <p>&copy; 2025 Jonathan Tullis</p>
-    <a href="site-plan.html">Site Plan</a>
   </footer>
 </body>
 </html>
